--- a/assets/css.css
+++ b/assets/css.css
@@ -1,16 +1,52 @@
+body {
+    margin: 0;
+    font-family: "Roboto", "Shrikhand", sans-serif, cursive;
+    text-align: center;
+    background: #f7f7f7;
+}
+
 header {
     position: relative;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 96px;
-    background: #FFFFFF;
+    font-family: "Shrikhand";
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-    margin: auto;
+    background-color: white;
 }
 
-nav {
-    margin: auto;
+.localisation {
+    background-color: #eaeaea;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.localisation i {
+    margin-right: 13px;
+}
+
+.reservez {
+    font-size: 38px;
+}
+
+.decouvrez {
+    color: #353535;
+    font-weight: 300;
+    margin: 20px 30px;
+}
+
+.bouton1 {
+    padding: 13px 16px;
+    color: white;
+    background: linear-gradient(0deg, #9356dc -5.2%, #ff79da 110.74%);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 50px;
+    border: none;
+}
 
 footer {
     margin: auto;
@@ -23,26 +59,6 @@ footer {
     margin-left: 700px;
 }
 
-.barrederecherche {
-    height: 50px;
-    width: 100%;
-    background: #EAEAEA;
-}
-
-.location {
-    height: 16px;
-    width: 11.99999713897705px;
-    margin-left: 837px;
-    margin-top: 16px;
-}
-
-.Paris-belleville {
-    height: 19px;
-    width: 109px;
-    font-family: 'Roboto';
-    margin-left: 860px;
-    margin-top: -16px;
-}
 
 .Menuquivousconvient {
     position: absolute;
@@ -58,35 +74,6 @@ footer {
     color: #000000;
 }
 
-.Découvrez_des_restaurants {
-    position: relative;
-    width: 531px;
-    height: 46px;
-    left: 650px;
-    top: 78px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 21px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #353535;    
-}
-
-.Firstbouton {
-    position: relative;
-    background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 25px;
-    height: 50px;
-    width: 218px;
-    top: 50px;
-    margin-top: 50px;
-    border-radius: 25px;
-    left: 780px;
-}
 
 .textinfirstbouton {
     position: relative;
@@ -108,7 +95,7 @@ footer {
 
 nav {
     height: 262px;
-    top: 406px;   
+    top: 406px;
 }
 
 .cadrenav {
@@ -258,7 +245,7 @@ nav {
     font-weight: 700;
     font-size: 18px;
     line-height: 21px;
-    color: #000000;    
+    color: #000000;
 }
 
 .soustitre {
@@ -321,7 +308,7 @@ footer {
 
 
 .button:hover {
-    background-color:#9356DC;
+    background-color: #9356DC;
 }
 
 .button:active {
@@ -379,7 +366,7 @@ footer {
     z-index: 10;
 }
 
-@media only screen and (max-width: 1800px){
+@media only screen and (max-width: 1800px) {
     .ordre1 {
         top: -40px;
         margin-left: 1px;
@@ -391,14 +378,14 @@ footer {
         left: -43px;
         height: 300px;
         width: 340px;
-        border-radius: 15px;        
+        border-radius: 15px;
     }
-    
+
     .image {
         height: 231px;
         width: 346px;
     }
-    
+
     .descripton {
         display: block;
         top: -15px;
@@ -411,7 +398,7 @@ footer {
     }
 
     .soustitre {
-       top: -5px;
+        top: -5px;
     }
 
     .button {
@@ -420,31 +407,31 @@ footer {
     }
 }
 
-@media only screen and (max-width: 1080px){
+@media only screen and (max-width: 1080px) {
     header {
         width: 1080px;
     }
-    
+
     .ohmyfood {
         font-size: 37px;
         font-weight: 400;
         line-height: 54px;
         margin-left: 300px;
     }
-    
+
     .barrederecherche {
         height: 50px;
         width: 1080px;
         background: #EAEAEA;
     }
-    
+
     .location {
         height: 16px;
         width: 11.99999713897705px;
         margin-left: 400px;
         margin-top: 16px;
     }
-    
+
     .Paris-belleville {
         height: 19px;
         width: 109px;
@@ -452,7 +439,7 @@ footer {
         margin-left: 460px;
         margin-top: -16px;
     }
-    
+
     .Menuquivousconvient {
         position: absolute;
         width: 345px;
@@ -466,7 +453,7 @@ footer {
         text-align: center;
         color: #000000;
     }
-    
+
     .Découvrez_des_restaurants {
         position: relative;
         width: 531px;
@@ -481,9 +468,9 @@ footer {
         display: flex;
         align-items: center;
         text-align: center;
-        color: #353535;    
+        color: #353535;
     }
-    
+
     .Firstbouton {
         position: relative;
         background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
@@ -496,7 +483,7 @@ footer {
         border-radius: 25px;
         left: 780px;
     }
-    
+
     .textinfirstbouton {
         position: relative;
         height: 24px;
@@ -514,8 +501,8 @@ footer {
         justify-content: center;
         top: 12px;
     }
-    
-    
+
+
     .cadrenav {
         position: absolute;
         width: 1080px;
@@ -523,7 +510,7 @@ footer {
         background: #F5EDFF;
         margin: auto;
     }
-    
+
     .cadrefonction {
         position: relative;
         width: 1438px;
@@ -531,7 +518,7 @@ footer {
         background: #FFFFFF;
         margin: auto;
     }
-    
+
     .Fonctionnement {
         position: relative;
         width: 275px;
@@ -575,15 +562,15 @@ footer {
         left: -43px;
         height: 280px;
         width: 340px;
-        border-radius: 15px;        
+        border-radius: 15px;
     }
-    
+
     .image {
         height: 231px;
         width: 346px;
         right: 5px;
     }
-    
+
     .descripton {
         display: flex;
         top: -20px;
@@ -629,15 +616,15 @@ footer {
         left: -43px;
         height: 280px;
         width: 340px;
-        border-radius: 15px;        
+        border-radius: 15px;
     }
-    
+
     .image {
         height: 231px;
         width: 346px;
         right: 5px;
     }
-    
+
     .descripton {
         display: flex;
         flex-direction: column;
@@ -647,7 +634,7 @@ footer {
         width: 350px;
         left: 5px;
     }
-    
+
 
     .titre {
         height: 90px;
@@ -658,7 +645,7 @@ footer {
         line-height: 21px;
         color: #000000;
     }
-    
+
     .soustitre {
         color: #000000;
         height: 40px;
@@ -674,7 +661,7 @@ footer {
         background: #353535;
         top: 410px;
     }
-        
+
 
     .orderfooter {
         display: flex;
@@ -700,46 +687,46 @@ footer {
         height: 50px;
         width: 375px;
     }
-    
+
     .ohmyfood {
         height: 44px;
         width: 162px;
         margin-left: 100px;
     }
-    
+
     .barrederecherche {
         height: 50px;
         width: 375px;
         left: -0.5px;
     }
-    
+
     .location {
         height: 16px;
         width: 11.99999713897705px;
         margin-left: 118.5px;
         top: 17px;
     }
-    
+
     .Paris-belleville {
         height: 19px;
         width: 109px;
         margin-left: 147.5px;
         top: 15.5px;
     }
-    
+
     .Menuquivousconvient {
         height: 68px;
         width: 275px;
         left: 42px;
     }
-    
+
     .Découvrez_des_restaurants {
         height: 46px;
         width: 315px;
         left: 34px;
         margin-top: 85px;
     }
-    
+
     .Firstbouton {
         height: 50px;
         width: 218px;
@@ -747,20 +734,20 @@ footer {
         top: 50px;
         border-radius: 25px;
     }
-    
+
     .textinfirstbouton {
         height: 24px;
         width: 180.49462890625px;
         left: 18.752685546875px;
         top: 13px;
     }
-    
+
     nav {
         height: 440px;
         width: 375px;
         top: 400px;
     }
-    
+
     .cadrenav {
         position: absolute;
         width: 375px;
@@ -778,14 +765,14 @@ footer {
         width: 275px;
         left: 20px;
     }
-    
+
     .Fonctionnementorder {
         position: relative;
         display: flex;
         flex-direction: column;
         width: 375px;
     }
-    
+
     .Fonctionbouton {
         width: 322.49px;
         height: 72.38px;
@@ -795,8 +782,8 @@ footer {
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
         border-radius: 20px;
     }
-    
-    
+
+
     .textinbutton {
         position: relative;
         width: 211px;
@@ -809,7 +796,7 @@ footer {
         display: flex;
         left: 80px;
     }
-    
+
     .Grandcadreresto {
         display: flex;
         width: 375px;
@@ -830,7 +817,7 @@ footer {
         color: #000000;
         top: -25px;
     }
-    
+
     .ordre1 {
         top: -40px;
         margin-left: 1px;
@@ -842,15 +829,15 @@ footer {
         left: -43px;
         height: 280px;
         width: 340px;
-        border-radius: 15px;        
+        border-radius: 15px;
     }
-    
+
     .image {
         height: 231px;
         width: 346px;
         right: 5px;
     }
-    
+
     .descripton {
         display: flex;
         flex-direction: column;
@@ -860,7 +847,7 @@ footer {
         width: 350px;
         left: 5px;
     }
-    
+
 
     .titre {
         height: 90px;
@@ -871,7 +858,7 @@ footer {
         line-height: 21px;
         color: #000000;
     }
-    
+
     .soustitre {
         color: #000000;
         height: 40px;
@@ -898,7 +885,7 @@ footer {
         color: #FFFFFF;
     }
 
-    .button{
+    .button {
         margin-left: 320px;
         top: -105px;
         z-index: 12;
