--- a/assets/css.css
+++ b/assets/css.css
@@ -118,7 +118,7 @@ nav {
     position: relative;
     width: 275px;
     height: 31px;
-    left: 193px;
+    left: 100px;
     margin-top: 100px;
     font-family: 'Roboto';
     font-style: normal;
@@ -153,9 +153,8 @@ nav {
 
 .icon {
     position: relative;
-    display: flex;
+    right: 120px;
     top: 30px;
-    left: 40px;
 }
 
 .textinbutton {
@@ -239,7 +238,8 @@ nav {
 }
 
 .titre {
-    position: relative;
+    display: flex;
+    justify-content: flex-start;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -249,7 +249,8 @@ nav {
 }
 
 .soustitre {
-    position: relative;
+    display: flex;
+    justify-content: flex-start;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
@@ -266,6 +267,7 @@ footer {
 }
 
 .orderfooter {
+    margin: auto;
     display: flex;
     flex-direction: row;
     margin-left: 665px;
@@ -294,25 +296,41 @@ footer {
     margin-top: 275px;
 }
 
-.button {
-    color: gainsboro;
-    background: none;
+.article__infos__jaime {
+    position: relative;
+    border: none;
+    background-color: transparent;
+    display: flex;
+    font-size: 2.1em;
+    top: 360px;
+    left: -50px;
+  }
+
+.article__infos__jaime input {
     position: absolute;
-    display: inline-block;
-    height: 21.000381469726562px;
-    width: 21.6768798828125px;
-    right: 5px;
-    margin-top: 70px;
-    top: -25px;
+    z-index: 5;
+    height: 6vw;
+    width: 5vw;
+    opacity: 0;
 }
 
-
-.button:hover {
-    background-color: #9356DC;
+.article__infos__jaime .fa-solid {
+    position: absolute;
+    opacity: 0;
+    transition: opacity 0.4s, font-size 0.2s;
+    z-index: 1;
+    background: linear-gradient(to bottom, #9356dc, #ff79da);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
 }
 
-.button:active {
-    background-color: blue;
+.article__infos__jaime .fa-regular {
+    position: absolute;
+}
+
+.article__infos__jaime input[type=checkbox]:checked + .fa-solid {
+    opacity: 1;
 }
 
 .omf {
@@ -355,14 +373,14 @@ footer {
 }
 
 .minitext {
+    text-align: center;
     position: relative;
     font-family: 'Roboto';
     font-size: 14px;
     font-weight: 500;
     line-height: 16px;
-    text-align: center;
     color: #008766;
-    top: -5px;
+    top: -8px;
     z-index: 10;
 }
 
@@ -397,27 +415,56 @@ footer {
         left: 5px;
     }
 
-    .soustitre {
-        top: -5px;
-    }
-
-    .button {
+    .button1 {
         top: -105px;
         z-index: 13;
     }
+
+    .article__infos__jaime {
+        position: relative;
+        border: none;
+        background-color: transparent;
+        display: flex;
+        font-size: 2.1em;
+        top: 360px;
+        left: -90px;
+        z-index: 12;
+    }
+
+    .article__infos__jaime input {
+        position: absolute;
+        z-index: 12;
+        height: 6vw;
+        width: 5vw;
+        opacity: 0;
+    }
+
+    .article__infos__jaime .fa-solid {
+        position: absolute;
+        opacity: 0;
+        transition: opacity 0.4s, font-size 0.2s;
+        z-index: 1;
+        background: linear-gradient(to bottom, #9356dc, #ff79da);
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+    }
+
+    .article__infos__jaime .fa-regular {
+        position: absolute;
+    }
+
+    .article__infos__jaime input[type=checkbox]:checked + .fa-solid {
+        opacity: 1;
+    }
 }
 
-@media only screen and (max-width: 1080px) {
-    header {
-        width: 1080px;
-    }
 
-    .ohmyfood {
-        font-size: 37px;
-        font-weight: 400;
-        line-height: 54px;
-        margin-left: 300px;
-    }
+
+
+
+@media only screen and (max-width: 1080px) {
+
 
     .barrederecherche {
         height: 50px;
@@ -560,7 +607,7 @@ footer {
         top: 75px;
         margin-top: 30px;
         left: -43px;
-        height: 280px;
+        height: 300px;
         width: 340px;
         border-radius: 15px;
     }
@@ -571,20 +618,6 @@ footer {
         right: 5px;
     }
 
-    .descripton {
-        display: flex;
-        top: -20px;
-        flex-direction: column;
-        z-index: 8;
-        z-index: 10;
-        height: 70px;
-        width: 350px;
-        left: 5px;
-    }
-
-    .soustitre {
-        top: -25px;
-    }
 
     footer {
         height: 300px;
@@ -614,7 +647,7 @@ footer {
         top: 75px;
         margin-top: 30px;
         left: -43px;
-        height: 280px;
+        height: 300px;
         width: 340px;
         border-radius: 15px;
     }
@@ -625,43 +658,12 @@ footer {
         right: 5px;
     }
 
-    .descripton {
-        display: flex;
-        flex-direction: column;
-        z-index: 8;
-        z-index: 10;
-        height: 70px;
-        width: 350px;
-        left: 5px;
-    }
-
-
-    .titre {
-        height: 90px;
-        width: 380px;
-        font-family: 'Roboto';
-        font-style: normal;
-        font-size: 18px;
-        line-height: 21px;
-        color: #000000;
-    }
-
-    .soustitre {
-        color: #000000;
-        height: 40px;
-        width: 380px;
-        margin-top: -65px;
-        font-family: 'Roboto';
-        font-style: normal;
-    }
-
     footer {
         height: 300px;
         width: 1000px;
         background: #353535;
         top: 410px;
     }
-
 
     .orderfooter {
         display: flex;
@@ -673,7 +675,7 @@ footer {
         color: #FFFFFF;
     }
 
-    .button {
+    .button1 {
         margin-left: 320px;
         top: -105px;
         z-index: 12;
@@ -682,17 +684,6 @@ footer {
 
 
 @media only screen and (max-width: 768px) {
-
-    header {
-        height: 50px;
-        width: 375px;
-    }
-
-    .ohmyfood {
-        height: 44px;
-        width: 162px;
-        margin-left: 100px;
-    }
 
     .barrederecherche {
         height: 50px;
@@ -757,7 +748,6 @@ footer {
     .cadrefonction {
         height: 440px;
         width: 375px;
-        top: -150px;
     }
 
     .Fonctionnement {
@@ -801,7 +791,6 @@ footer {
         display: flex;
         width: 375px;
         height: 1400px;
-        top: -150px;
     }
 
     .Restaurants {
@@ -827,7 +816,7 @@ footer {
         top: 75px;
         margin-top: 30px;
         left: -43px;
-        height: 280px;
+        height: 300px;
         width: 340px;
         border-radius: 15px;
     }
@@ -838,41 +827,11 @@ footer {
         right: 5px;
     }
 
-    .descripton {
-        display: flex;
-        flex-direction: column;
-        z-index: 8;
-        z-index: 10;
-        height: 70px;
-        width: 350px;
-        left: 5px;
-    }
-
-
-    .titre {
-        height: 90px;
-        width: 380px;
-        font-family: 'Roboto';
-        font-style: normal;
-        font-size: 18px;
-        line-height: 21px;
-        color: #000000;
-    }
-
-    .soustitre {
-        color: #000000;
-        height: 40px;
-        width: 380px;
-        margin-top: -65px;
-        font-family: 'Roboto';
-        font-style: normal;
-    }
-
     footer {
         height: 300px;
         width: 375px;
         background: #353535;
-        top: -150px;
+        top: 50px;
     }
 
     .orderfooter {
@@ -885,7 +844,7 @@ footer {
         color: #FFFFFF;
     }
 
-    .button {
+    .button1 {
         margin-left: 320px;
         top: -105px;
         z-index: 12;
