--- a/assets/styles.css
+++ b/assets/styles.css
@@ -61,30 +61,6 @@ header {
     background: #FFFFFF;
 }
 
-.ok2 {
-    position: relative;
-    top: -90px;
-    color: #FFFFFF;
-    z-index: 11;
-}
-
-.ok1 {
-    position: relative;
-    margin-left: 554px;
-    border-radius: 0px 15px 15px 0px;
-    background: none;
-    padding: 39px;
-    top: -90px;
-    opacity: 0;
-    color: #FFFFFF;
-    transition: opacity 0.3s;
-    z-index: 11;
-}
-
-.ok1:hover {
-    opacity: 1;
-    background: #99E2D0;
-}
 
 
 
@@ -92,43 +68,12 @@ header {
 
 
 
-.carte__plats {
-    border-radius: 15px;
-    overflow: hidden;
-    box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
-    background-color: white;
-    font-weight: bold;
-    margin: 16px 16px 16px 0;
-  }
-  .carte__plats__infos {
-    width: 100%;
-    align-items: flex-end;
-    justify-content: space-between;
-    height: 88px;
-    display: flex;
-  }
-  .carte__plats__infos__div-info {
-    width: 83%;
-    margin: 14px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  .carte__plats__infos span {
-    margin: 16px;
-  }
-  .carte__plats__infos p {
-    font-weight: 300;
-    margin: 1% 0;
-    white-space: nowrap;
-    overflow: hidden;
-    font-size: 16px;
-    text-overflow: ellipsis;
-  }
-  .carte__plats__infos:hover .carte__plats__infos__checkbox {
+
+.minicadre:hover .carte__plats__infos__checkbox {
     width: 88px;
-  }
-  .carte__plats__infos__checkbox {
+}
+
+.carte__plats__infos__checkbox {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -139,64 +84,29 @@ header {
     height: 100%;
     cursor: pointer;
     transition: all 0.3s ease;
-  }
-  .carte__plats__infos__checkbox input {
+    right: -270px;
+}
+
+.carte__plats__infos__checkbox input {
     z-index: 1;
     position: absolute;
     opacity: 0;
-  }
-  .carte__plats__infos__checkbox .fa-check {
+}
+
+.carte__plats__infos__checkbox .fa-check {
     border-radius: 50px;
     background-color: #ffffff;
     display: flex;
     padding: 6px;
     color: #99e2d0;
-  }
-  
-  @keyframes apparitions {
-    0% {
-      opacity: 0;
-      transform-origin: 50% 50%;
-      transform: scale(0, 0);
-    }
-    90% {
-      opacity: 1;
-      transform-origin: 50% 50%;
-      transform: scale(0.9, 0.9);
-    }
-    100% {
-      opacity: 1;
-      transform-origin: 50% 50%;
-      transform: scale(1, 1);
-    }
-  }
-  .delai-0 {
-    animation-delay: 0s;
-  }
-  
-  .delai-1 {
-    animation-delay: 0.3s;
-  }
-  
-  .delai-2 {
-    animation-delay: 0.6s;
-  }
-  
-  .btn-commander {
-    padding: 3% 8%;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 19px;
-    color: white;
-    background: linear-gradient(0deg, #9356dc -5.2%, #ff79da 110.74%);
-    border: none;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 50px;
-  }
-  .btn-commander:hover {
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(0deg, #9356dc -5.2%, #ff79da 110.74%);
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
-  }
+}
+
+.fa-solid {
+    color: #FFFFFF;
+}
+
+
+
   
 
 
