--- a/assets/styles.css
+++ b/assets/styles.css
@@ -50,12 +50,11 @@ header {
 
 .minicadre {
     display: flex;
-    height: 68.0689697265625px;
+    height: 90px;
     width: 634px;
     top: 39px;
     margin-bottom: 40px;
     border-radius: 15.043103218078613px;
-    padding: 12px 5px 12px 20px;
     box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px #0000001A;
     margin-left: 200px;
     background: #FFFFFF;
@@ -68,6 +67,43 @@ header {
 
 
 
+
+.article__infos__jaime {
+    position: relative;
+    border: none;
+    background-color: transparent;
+    display: flex;
+    font-size: 2.1em;
+    top: -60px;
+    right: -615px;
+  }
+
+.article__infos__jaime input {
+    position: absolute;
+    z-index: 5;
+    height: 6vw;
+    width: 5vw;
+    opacity: 0;
+}
+
+.article__infos__jaime .fa-solid {
+    position: absolute;
+    opacity: 0;
+    transition: opacity 0.4s, font-size 0.2s;
+    z-index: 1;
+    background: linear-gradient(to bottom, #9356dc, #ff79da);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+.article__infos__jaime .fa-regular {
+    position: absolute;
+}
+
+.article__infos__jaime input[type=checkbox]:checked + .fa-solid {
+    opacity: 1;
+}
 
 .minicadre:hover .carte__plats__infos__checkbox {
     width: 88px;
@@ -84,7 +120,7 @@ header {
     height: 100%;
     cursor: pointer;
     transition: all 0.3s ease;
-    right: -270px;
+    border-radius: 0px 12px 12px 0px;
 }
 
 .carte__plats__infos__checkbox input {
@@ -106,8 +142,10 @@ header {
 }
 
 
-
-  
+.prix {
+    left: 45px;
+    margin-top: 25px;
+}
 
 
 
@@ -191,9 +229,10 @@ footer {
 }
 
 .description {
+    display: inline;
     margin-top: -16px;
     height: 44px;
-    width: 274.787353515625px;
+    width: 44%;
 }
 
 .prix {
@@ -307,7 +346,6 @@ footer {
     }
 
     .minicadre {
-        height: 50px;
         width: 300px;
         top: 39px;
         border-radius: 15.043103218078613px;
