--- a/assets/styles.css
+++ b/assets/styles.css
@@ -60,6 +60,15 @@ header {
     background: #FFFFFF;
 }
 
+.bouton {
+    padding: 13px 16px;
+    color: white;
+    background: linear-gradient(0deg, #9356dc -5.2%, #ff79da 110.74%);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 50px;
+    border: none;
+    margin-left: 500px;
+}
 
 
 
@@ -106,7 +115,7 @@ header {
 }
 
 .minicadre:hover .carte__plats__infos__checkbox {
-    width: 88px;
+    width: 130px;
 }
 
 .carte__plats__infos__checkbox {
@@ -121,6 +130,7 @@ header {
     cursor: pointer;
     transition: all 0.3s ease;
     border-radius: 0px 12px 12px 0px;
+    margin-left: 220px;
 }
 
 .carte__plats__infos__checkbox input {
@@ -142,10 +152,7 @@ header {
 }
 
 
-.prix {
-    left: 45px;
-    margin-top: 25px;
-}
+
 
 
 
@@ -229,7 +236,8 @@ footer {
 }
 
 .description {
-    position: relative;
+    left: 225px;
+    position: absolute;
     height: 44px;
     width: 44%;
 }
@@ -247,18 +255,16 @@ footer {
     height: 68.07px;
     position: relative;
     display: flex;
-    top: -30px;
-    margin-left: 300px;
-    background: hidden;
+    left: 280px;
+    margin-left: 290px;
     align-items: center;
     border-radius: 15.043103218078613px;
     padding: 12px 5px 12px 20px;
     z-index: 11;
-    transition: transform 0.3s;
 }
 
-.ok1:hover + .prix {
-    right: 80px;
+.minicadre:hover .prix {
+    left: 240px;
 }
 
 .textinbutton {
@@ -356,17 +362,17 @@ footer {
     }
 
     .cadre {
-        height: 1307px;
+        height: 1500px;
         width: 360px;
         top: 3px;
-        right: 45px;
+        left: -45px;
     }
 
     .minicadre {
-        width: 300px;
+        width: 350px;
         top: 39px;
         border-radius: 15.043103218078613px;
-        margin-left: 11px;
+        margin-left: 5px;
     }
 
     .description {
@@ -374,12 +380,9 @@ footer {
         flex-direction: column;
         height: 40px;
         width: 274.787353515625px;
+        left: 30px;
     }
 
-    .minicadre:hover .carte__plats__infos__checkbox {
-        width: 88px;
-    }
-    
     .carte__plats__infos__checkbox {
         display: flex;
         justify-content: center;
@@ -392,8 +395,27 @@ footer {
         cursor: pointer;
         transition: all 0.3s ease;
         border-radius: 0px 12px 12px 0px;
+        margin-left: -55px;
     }
-
+    
+    .carte__plats__infos__checkbox input {
+        z-index: 1;
+        position: absolute;
+        opacity: 0;
+    }
+    
+    .carte__plats__infos__checkbox .fa-check {
+        border-radius: 50px;
+        background-color: #ffffff;
+        display: flex;
+        padding: 6px;
+        color: #99e2d0;
+    }
+    
+    .fa-solid {
+        color: #FFFFFF;
+    }
+    
     .titremenu {
         position: relative;
         height: 21px;
@@ -406,17 +428,11 @@ footer {
     }
 
     .prix {
-        width: 100px;
-        height: 68.07px;
-        position: relative;
-        display: flex;
-        margin-left: 20px;
-        background: hidden;
-        align-items: center;
-        border-radius: 15.043103218078613px;
-        padding: 12px 5px 12px 20px;
-        z-index: 11;
-        transition: transform 0.3s;
+        left: -10px;
+    }
+
+    .minicadre:hover .prix {
+        left: -60px;
     }
 
     .bouton {
@@ -434,7 +450,7 @@ footer {
         height: 300px;
         width: 375px;
         background: #353535;
-        top: 2.5px;
+        top: 20px;
     }
 
     .orderfooter {
