Paramètre de police

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,4 @@
+
 header {
     position: absolute;
     width: 100%;
@@ -67,7 +68,8 @@ header {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     border-radius: 50px;
     border: none;
-    margin-left: 500px;
+    cursor: crosshair;
+    margin-left: 450px;
 }
 
 
@@ -115,7 +117,7 @@ header {
 }
 
 .minicadre:hover .carte__plats__infos__checkbox {
-    width: 130px;
+    width: 100%;
 }
 
 .carte__plats__infos__checkbox {
@@ -130,7 +132,6 @@ header {
     cursor: pointer;
     transition: all 0.3s ease;
     border-radius: 0px 12px 12px 0px;
-    margin-left: 220px;
 }
 
 .carte__plats__infos__checkbox input {
@@ -202,6 +203,9 @@ footer {
 }
 
 
+.fa-heart {
+    margin-left: 50px;
+}
 
 .ohmyfood {
     position: relative;
@@ -236,18 +240,25 @@ footer {
 }
 
 .description {
-    left: 225px;
-    position: absolute;
+    position: relative;
     height: 44px;
-    width: 44%;
+    left: 20px;
 }
 
 .titremenu {
-    position: relative
+    position: relative;
+    width: 400px;
 }
 
 .soustitre {
     position: relative;
+    width: 400px;
+}
+
+.minicadre .soustitre {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .prix {
@@ -255,16 +266,16 @@ footer {
     height: 68.07px;
     position: relative;
     display: flex;
-    left: 280px;
-    margin-left: 290px;
     align-items: center;
     border-radius: 15.043103218078613px;
     padding: 12px 5px 12px 20px;
+    transition: all 0.3s ease;
     z-index: 11;
+    margin-left: 120px;
 }
 
 .minicadre:hover .prix {
-    left: 240px;
+    left: -50px;
 }
 
 .textinbutton {
@@ -376,13 +387,23 @@ footer {
     }
 
     .description {
-        display: flex;
+        position: relative;
         flex-direction: column;
-        height: 40px;
-        width: 274.787353515625px;
+        height: 23px;
+        width: auto;
         left: 30px;
+        font-size: 15px;
+        white-space: none;
     }
 
+    .minicadre:hover .description {
+        text-overflow: ellipsis;
+    }
+
+    .minicadre:hover .carte__plats__infos__checkbox {
+        width: 70%;
+    }
+    
     .carte__plats__infos__checkbox {
         display: flex;
         justify-content: center;
@@ -395,7 +416,7 @@ footer {
         cursor: pointer;
         transition: all 0.3s ease;
         border-radius: 0px 12px 12px 0px;
-        margin-left: -55px;
+        margin-left: -340px;
     }
     
     .carte__plats__infos__checkbox input {
@@ -404,13 +425,6 @@ footer {
         opacity: 0;
     }
     
-    .carte__plats__infos__checkbox .fa-check {
-        border-radius: 50px;
-        background-color: #ffffff;
-        display: flex;
-        padding: 6px;
-        color: #99e2d0;
-    }
     
     .fa-solid {
         color: #FFFFFF;
@@ -428,22 +442,22 @@ footer {
     }
 
     .prix {
-        left: -10px;
+        left: -300px;
     }
 
     .minicadre:hover .prix {
-        left: -60px;
+        left: -350px;
     }
 
     .bouton {
-        position: relative;
-        height: 50px;
-        width: 186px;
-        margin-left: 100px;
-        top: 50px;
-        border-radius: 25px;
-        background-color: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-        padding: 30px;
+        padding: 13px 16px;
+        color: white;
+        background: linear-gradient(0deg, #9356dc -5.2%, #ff79da 110.74%);
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+        border-radius: 50px;
+        border: none;
+        text-decoration: none;
+        margin-left: 125px;
     }
 
     footer {
@@ -472,15 +486,21 @@ footer {
 
     .lapalettedegout {
         display: flex;
-        margin-left: 70px;
+        margin-left: 80px;
         height: 41px;
-        width: 261px;
+        width: 300px;
         font-family: 'Shrikhand';
-        font-size: 28px;
+        font-size: 20px;
         font-style: italic;
         font-weight: 400;
         line-height: 41px; 
     }
+    
+    .fa-heart {
+        top: 7px;
+        margin-left: 5px;
+    }
+
 
     .icone {
         margin-left: 280px;
