--- a/assets/css.css
+++ b/assets/css.css
@@ -47,7 +47,11 @@ header {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     border-radius: 50px;
     border: none;
+    text-decoration: none;
+    cursor: crosshair;
 }
+
+
 
 footer {
     margin: auto;
@@ -274,7 +278,6 @@ footer {
     margin-left: 665px;
     margin-right: 50px;
     font-family: 'Roboto';
-    text-align: left;
     color: #FFFFFF;
     justify-content: space-between;
 }
@@ -284,6 +287,11 @@ footer {
     flex-direction: row;
     width: auto;
     text-align: center;
+}
+
+.footersuperline {
+    font-family: "Shrikhand";
+    font-size: medium;
 }
 
 .iconefooter {
