--- a/assets/css.css
+++ b/assets/css.css
@@ -1,3 +1,25 @@
+.loading {
+    width: 40px;
+    height: 60px;
+    top: 50%;
+    left: 50%;
+    border: #99E2D0;
+    border-top: 4px solid #3498db;
+    border-color: #9356dc;
+    animation: spin 3s infinite;
+    transform: translate(-50%, 50%);
+    position: absolute;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 body {
     margin: 0;
     font-family: "Roboto", "Shrikhand", sans-serif, cursive;
